--- a/.dockerignore
+++ b/.dockerignore
@@ -1,38 +1,21 @@
-*.pyc
-*.pyo
-*.mo
-*.db
-*.css.map
-*.egg-info
-*.sql.gz
-.cache
-.project
-.idea
-.pydevproject
-.idea/workspace.xml
+# mac
 .DS_Store
-.git/
-.sass-cache
-.vagrant/
-__pycache__
-dist
-docs
-env
-logs
-src/{{ project_name }}/settings/local.py
-src/node_modules
-web/media
-web/static/CACHE
-stats
-Dockerfile*
-docker-compose*
-.DS_Store
-.dockerignore
-.git/
+
+# Git
+.git
 .gitignore
-README.rst
-README.md
-*.pyc
-__pycache__
 
+# Docker
+.docker
 
+# Python
+code/__pycache__/
+code/*/__pycache__/
+code/*/*/__pycache__/
+code/*/*/*/__pycache__/
+.env
+#.venv
+#venv/
+
+# Local PostgreSQL data
+# data/
