--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,8 @@
-SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=postgres
-SQL_USER=postgres
-SQL_PASSWORD=
-SQL_HOST=db
-SQL_PORT=5432
+SECRET_KEY=aaaaaaaaa
+DEBUG=True
 ALLOWED_HOSTS=0.0.0.0,localhost,127.0.0.1
+DATABASE_URL=postgres://root:secret1234@db:5432/folio
+
+POSTGRES_USER=root
+POSTGRES_PASSWORD=secret1234
+POSTGRES_DB=folio
