--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,32 @@
-version: "3.8"
+version: "3.9"
 
 services:
     web:
         image: "folio-backend:dev"
-
         build:
             target: development_build
             context: .
-            cache_from:
-                - "folio-backend:dev"
-                - "folio-backend:latest"
-                - "*"
             args:
                 DJANGO_ENV: development
-        command: python -Wd manage.py runserver 0.0.0.0:8000
+        command: >
+            sh -c "python manage.py wait_for_db &&
+                    python manage.py migrate &&
+                    python manage.py runserver 0.0.0.0:8000"
         ports:
             - 8000:8000
+        volumes:
+            - ./code:/code
         env_file:
             - ./.env.dev
         depends_on:
             - db
-
     db:
-        image: postgres:12.0-alpine
+        image: postgres:13.0-alpine
         restart: unless-stopped
-        volumes:
-            - postgres_data:/var/lib/postgresql/data/
         env_file:
             - ./.env.dev
+        # volumes:
+        #     - postgres_data:/var/lib/postgresql/data/
 
-volumes:
-    postgres_data:
+# volumes:
+#     postgres_data:
